--- a/demo/assets/style/less/demo.less
+++ b/demo/assets/style/less/demo.less
@@ -1,4 +1,3 @@
-
 body {
     width: 800px;
     height: 500px;
@@ -8,3 +7,30 @@ body {
     overflow: hidden;
 }
 
+// #slider-img-container-5 {
+//     animation: slide 1s;
+//     animation-fill-mode: forwards;
+// }
+
+// @keyframes slide {
+//     0% {
+//         left: 0;
+//     }
+//     100% {
+//         left: -100%;
+//     }
+// }
+
+// @keyframes slide-2 {
+//     0% {
+//         left: 100%;
+//     }
+//     100% {
+//         left: 0;
+//     }
+// }
+
+// #slider-img-container-6 {
+//     animation: slide-2 1s;
+//     animation-fill-mode: forwards;
+// }
